--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	kosme/arduinoFFT@^1.5.6
 	stm32duino/STM32duino Low Power@^1.2.0
 	stm32duino/STM32duino RTC@^1.3.1
-upload_protocol = serial
+upload_protocol = stlink
+upload_flags = -c set CPUTAPID 0x2ba01477
